update tradução e builds pesquisadas

--- a/contato/contato.html
+++ b/contato/contato.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Contato | Guariní e-sport</title>
+  <title>Contact | Guariní e-sport</title>
   <link rel="stylesheet" href="../style.css" />
   <link rel="icon" href="favicon.png" type="image/png" />
   <div id="google_translate_element"></div>
@@ -38,8 +38,8 @@ function googleTranslateElementInit() {
       <!-- Navegação Desktop - Esquerda -->
       <nav class="nav-group left-nav">
         <ul>
-          <li><a href="../loja/loja.html">Loja</a></li>
-          <li><a href="../sobre/sobre.html">Sobre</a></li>
+          <li><a href="../loja/loja.html">Shop</a></li>
+          <li><a href="../sobre/sobre.html">About</a></li>
         </ul>
       </nav>
       
@@ -53,8 +53,8 @@ function googleTranslateElementInit() {
       <!-- Navegação Desktop - Direita -->
       <nav class="nav-group right-nav">
         <ul>
-          <li><a href="../groups/groups.html">Jogos</a></li>
-          <li><a href="../contato/contato.html">Contato</a></li>
+          <li><a href="../groups/groups.html">Games</a></li>
+          <li><a href="../contato/contato.html">Contact</a></li>
         </ul>
       </nav>
       
@@ -80,20 +80,20 @@ function googleTranslateElementInit() {
   </header>
 
   <main>
-    <h2>Fale Conosco</h2>
-    <p>Quer entrar em contato com a equipe Guariní e-sport? Preencha nosso formulário abaixo:</p>
+    <h2>Contact Us</h2>
+    <p>Want to get in touch with Team Guariní E-sports? Fill out our form below:</p>
 
     <p style="text-align:center; margin: 2rem 0;">
-      <a href="https://forms.gle/EwrvixftrxC5iez4A" target="_blank" rel="noopener noreferrer" class="btn-comprar">Ir para o Formulário</a>
+      <a href="https://forms.gle/EwrvixftrxC5iez4A" target="_blank" rel="noopener noreferrer" class="btn-comprar">Go to Form</a>
     </p>
 
-    <p>Ou fale conosco diretamente pelas <a href="https://linktr.ee/guariniesports" target="_blank" rel="noopener noreferrer">redes sociais</a>.</p>
+    <p>Or reach out to us directly on <a href="https://linktr.ee/guariniesports" target="_blank" rel="noopener noreferrer">social media</a>.</p>
   </main>
 
   <footer>
-    <p>&copy; 2019 Guariní e-sport. Todos os direitos reservados.</p>
-    <p><a href="https://linktr.ee/guariniesports" target="_blank" rel="noopener noreferrer">Conheça nossas redes sociais</a></p>
-    <p>Created by: Lobo</p>
+    <p>&copy; © 2019 Guariní E-sport. All rights reserved.</p>
+    <p><a href="https://linktr.ee/guariniesports" target="_blank" rel="noopener noreferrer">Follow our social media</a></p>
+    <p>Created by: Shad & Lobo</p>
   </footer>
 </body>
 </html>
