--- a/loja/loja.html
+++ b/loja/loja.html
@@ -118,103 +118,103 @@ function googleTranslateElementInit() {
   </div>
 
   <main>
-    <h2>Loja Oficial Guariní</h2>
+    <h2>Official Shop Guariní</h2>
     <section class="produtos">
       <article class="produto">
         <img src="./img-shop/camisa.jpg" alt="Camisa Oficial Guariní" />
-        <h3>Camisa Oficial</h3>
-        <p class="preco">Em breve</p>
-        <button type="button" class="btn-comprar" disabled>Em breve</button>
+        <h3>Official Shirt</h3>
+        <p class="preco">Coming soon</p>
+        <button type="button" class="btn-comprar" disabled>Coming soon</button>
       </article>
 
       <article class="produto">
         <img src="./img-shop/mochila.jpg" alt="Mochila Guariní" />
-        <h3>Mochila</h3>
+        <h3>Backpack</h3>
         <p class="preco">$ 47,70</p>
-        <button type="button" class="btn-comprar" data-link="https://streamlabs.com/guarini_esports/merch/5571573">Comprar</button>
+        <button type="button" class="btn-comprar" data-link="https://streamlabs.com/guarini_esports/merch/5571573">Buy</button>
       </article>
 
       <article class="produto">
         <img src="./img-shop/agenda.jpg" alt="Caderno capa dura Guariní" />
-        <h3>Meu caderno de capa dura</h3>
+        <h3>Hardcover Notebook</h3>
         <p class="preco">$ 21,00</p>
-        <button type="button" class="btn-comprar" data-link="https://streamlabs.com/guarini_esports/merch/5023076">Comprar</button>
+        <button type="button" class="btn-comprar" data-link="https://streamlabs.com/guarini_esports/merch/5023076">Buy</button>
       </article>
 
       <article class="produto">
         <img src="./img-shop/caderno.jpg" alt="Caderno espiral Guariní" />
-        <h3>Caderno espiral</h3>
+        <h3> Spiral Notebook</h3>
         <p class="preco">$ 20,00</p>
-        <button type="button" class="btn-comprar" data-link="https://streamlabs.com/guarini_esports/merch/5609860">Comprar</button>
+        <button type="button" class="btn-comprar" data-link="https://streamlabs.com/guarini_esports/merch/5609860">Buy</button>
       </article>
 
       <article class="produto">
         <img src="./img-shop/garrafinha.jpg" alt="Garrafa de água Guariní" />
-        <h3>Garrafa de água de aço inoxidável</h3>
+        <h3>Stainless Steel Water Bottle</h3>
         <p class="preco">$ 30,00</p>
-        <button type="button" class="btn-comprar" data-link="https://streamlabs.com/guarini_esports/merch/5023084">Comprar</button>
+        <button type="button" class="btn-comprar" data-link="https://streamlabs.com/guarini_esports/merch/5023084">Buy</button>
       </article>    
 
       <article class="produto">
         <img src="./img-shop/caneca.jpg" alt="Caneca Guariní" />
-        <h3>Caneca de viagem com alça</h3>
+        <h3>Travel Mug with Handle</h3>
         <p class="preco">$ 29,00</p>
-        <button type="button" class="btn-comprar" data-link="https://streamlabs.com/guarini_esports/merch/5023087">Comprar</button>
+        <button type="button" class="btn-comprar" data-link="https://streamlabs.com/guarini_esports/merch/5023087">Buy</button>
       </article>  
 
       <article class="produto">
         <img src="./img-shop/copo-canudo.jpg" alt="Copo de aço Guariní" />
-        <h3>Copo de aço inoxidável</h3>
+        <h3>Stainless Steel Tumbler</h3>
         <p class="preco">$ 31,00</p>
-        <button type="button" class="btn-comprar" data-link="https://streamlabs.com/guarini_esports/merch/5609869">Comprar</button>
+        <button type="button" class="btn-comprar" data-link="https://streamlabs.com/guarini_esports/merch/5609869">Buy</button>
       </article> 
 
       <article class="produto">
         <img src="./img-shop/copo.jpg" alt="Copo Guariní" />
-        <h3>Copo de vinho</h3>
+        <h3>Wine Cup</h3>
         <p class="preco">$ 26,00</p>
-        <button type="button" class="btn-comprar" data-link="https://streamlabs.com/guarini_esports/merch/5609865">Comprar</button>
+        <button type="button" class="btn-comprar" data-link="https://streamlabs.com/guarini_esports/merch/5609865">Buy</button>
       </article> 
 
       <article class="produto">
         <img src="./img-shop/apple-arte.jpg" alt="Capa Snap para iPhone Guariní" />
-        <h3>Capa Snap para iPhone</h3>
+        <h3>Snap Case for iPhone</h3>
         <p class="preco">$ 22,00</p>
-        <button type="button" class="btn-comprar" data-link="https://streamlabs.com/guarini_esports/merch/5609863">Comprar</button>
+        <button type="button" class="btn-comprar" data-link="https://streamlabs.com/guarini_esports/merch/5609863">Buy</button>
       </article> 
 
       <article class="produto">
         <img src="./img-shop/samgung-arte.jpg" alt="Capa Snap para Samsung Guariní" />
-        <h3>Capa Snap para Samsung</h3>
+        <h3>Snap Case for Samsung</h3>
         <p class="preco">$ 22,00</p>
-         <button type="button" class="btn-comprar" data-link="https://streamlabs.com/guarini_esports/merch/5571581">Comprar</button>
+         <button type="button" class="btn-comprar" data-link="https://streamlabs.com/guarini_esports/merch/5571581">Buy</button>
       </article> 
 
       <article class="produto">
         <img src="./img-shop/apple-transparente.jpg" alt="Capa transparente para iPhone Guariní" />
-        <h3>Capa transparente para iPhone</h3>
+        <h3>Clear Case for iPhone</h3>
         <p class="preco">$ 18,00</p>
-        <button type="button" class="btn-comprar" data-link="https://streamlabs.com/guarini_esports/merch/5571559">Comprar</button>
+        <button type="button" class="btn-comprar" data-link="https://streamlabs.com/guarini_esports/merch/5571559">Buy</button>
       </article>
 
       <article class="produto">
         <img src="./img-shop/samsung-transparente.jpg" alt="Capa transparente para Samsung Guariní" />
-        <h3>Capa transparente para Samsung</h3>
+        <h3>Clear Case for Samsung</h3>
         <p class="preco">$ 17,00</p>
-        <button type="button" class="btn-comprar" data-link="https://streamlabs.com/guarini_esports/merch/5571557">Comprar</button>
+        <button type="button" class="btn-comprar" data-link="https://streamlabs.com/guarini_esports/merch/5571557">Buy</button>
       </article> 
 
       <article class="produto">
         <img src="./img-shop/stick.jpg" alt="Adesivos holográficos Kiss-Cut Guariní" />
-        <h3>Adesivos holográficos Kiss-Cut</h3>
+        <h3>Holographic Kiss-Cut Stickers</h3>
         <p class="preco">$ 11,00</p>
-        <button type="button" class="btn-comprar" data-link="https://streamlabs.com/guarini_esports/merch/5571571">Comprar</button>
+        <button type="button" class="btn-comprar" data-link="https://streamlabs.com/guarini_esports/merch/5571571">Buy</button>
       </article>
 
     </section>
 
     <p style="text-align:center; margin-top: 2rem;">
-      <a href="index.html" class="btn-comprar">Voltar para Início</a>
+      <a href="index.html" class="btn-comprar">Back to Home</a>
     </p>
   </main>
 
@@ -223,13 +223,13 @@ function googleTranslateElementInit() {
     <!-- Botões de ação no footer -->
     <div class="footer-actions">
       <!-- Botão de instalar app -->
-      <button id="installBtn" class="btn-install">📱 Instalar Guarini</button>
+      <button id="installBtn" class="btn-install">📱 Install App</button>
       
       <!-- Seletor de idioma customizado -->
       <div class="language-selector">
         <button class="language-btn" id="languageBtn">
-          <span class="flag flag-br"></span>
-          <span id="currentLang">Português</span>
+          <span class="flag flag-us"></span>
+          <span id="currentLang">English</span>
           <span>▼</span>
         </button>
         <div class="language-dropdown" id="languageDropdown">
