--- a/loja/loja.html
+++ b/loja/loja.html
@@ -214,7 +214,7 @@ function googleTranslateElementInit() {
     </section>
 
     <p style="text-align:center; margin-top: 2rem;">
-      <a href="index.html" class="btn-comprar">Back to Home</a>
+      <a href="../index.html" class="btn-comprar">Back to Home</a>
     </p>
   </main>
 
