--- a/material.html
+++ b/material.html
@@ -42,10 +42,14 @@ function googleTranslateElementInit() {
     
     <div class="user-dropdown" id="userDropdown">
       <div class="user-dropdown-header" id="userDropdownHeader">
-        <span>Olá, visitante!</span>
+        <span>Hello, visitor!</span>
       </div>
       <ul class="user-dropdown-list">
-        <li><a href="./perfil/perfil.html" id="perfilLink">Perfil</a></li>
+        <li><a href="./perfil/perfil.html" id="perfilLink">Profile</a></li>
+        <li><a href="./loja/loja.html">Shop</a></li>
+        <li><a href="./sobre/sobre.html">About</a></li>
+        <li><a href="./groups/groups.html">Games</a></li>
+        <li><a href="./contato/contato.html">Contact</a></li>
         <li><a href="#" id="authLink">Login</a></li>
       </ul>
     </div>
@@ -100,13 +104,13 @@ function googleTranslateElementInit() {
     <!-- Botões de ação no footer -->
     <div class="footer-actions">
       <!-- Botão de instalar app -->
-      <button id="installBtn" class="btn-install">📱 Instalar Guarini</button>
+      <button id="installBtn" class="btn-install">📱 Install App</button>
       
       <!-- Seletor de idioma customizado -->
       <div class="language-selector">
         <button class="language-btn" id="languageBtn">
-          <span class="flag flag-br"></span>
-          <span id="currentLang">Português</span>
+          <span class="flag flag-us"></span>
+          <span id="currentLang">English</span>
           <span>▼</span>
         </button>
         <div class="language-dropdown" id="languageDropdown">
@@ -128,9 +132,9 @@ function googleTranslateElementInit() {
 
     <!-- Informações do footer -->
     <div class="footer-info">
-      <p>&copy; 2019 Guarini e-sport. Todos os direitos reservados.</p>
-      <p><a href="https://linktr.ee/guariniesports" target="_blank">Conheça nossas redes sociais</a></p>
-      <p>Created by: Lobo & Shad</p>
+        <p>&copy; © 2019 Guariní E-sport. All rights reserved.</p>
+        <p><a href="https://linktr.ee/guariniesports" target="_blank">Follow us on social media!</a></p>
+        <p>Created by: Lobo & Shad</p>
     </div>
   </div>
 </footer>
