--- a/loja/loja.html
+++ b/loja/loja.html
@@ -41,7 +41,7 @@ function googleTranslateElementInit() {
       <!-- Navegação Desktop - Esquerda -->
       <nav class="nav-group left-nav">
         <ul>
-          <li><a href="./loja/loja.html">Shop</a></li>
+          <li><a href="./loja.html">Shop</a></li>
           <li><a href="../sobre/sobre.html">About</a></li>
         </ul>
       </nav>
@@ -49,7 +49,7 @@ function googleTranslateElementInit() {
       <!-- Logo Central -->
       <div class="logo-center">
         <a href="../index.html" aria-label="Início" class="ativo">
-          <img src="../img-site/Guarini.png" alt="Guariní e-sport" class="header-logo">
+          <img src="../img-site/grn-logo.png" alt="Guarini e-sport" class="header-logo">
         </a>
       </div>
 
@@ -58,24 +58,6 @@ function googleTranslateElementInit() {
         <ul>
           <li><a href="../groups/groups.html">Games</a></li>
           <li><a href="../contato/contato.html">Contact</a></li>
-        </ul>
-      
-      <!-- Botão Menu Mobile -->
-      <button class="menu-toggle" aria-label="Menu">
-        <span></span>
-        <span></span>
-        <span></span>
-      </button>
-      
-      <!-- Menu Mobile -->
-      <nav class="mobile-menu">
-        <ul>
-          <li><a href="index.html">Início</a></li>
-          <li><a href="sobre.html">Sobre</a></li>
-          <li><a href="equipes.html">Times</a></li>
-          <li><a href="loja.html" class="ativo">Loja</a></li>
-          <li><a href="material.html">Material</a></li>
-          <li><a href="contato.html">Contato</a></li>
         </ul>
       </nav>
     </div>
@@ -95,6 +77,10 @@ function googleTranslateElementInit() {
       </div>
       <ul class="user-dropdown-list">
         <li><a href="../perfil/perfil.html" id="perfilLink">Profile</a></li>
+        <li><a href="./loja.html">Shop</a></li>
+        <li><a href="../sobre/sobre.html">About</a></li>
+        <li><a href="../groups/groups.html">Games</a></li>
+        <li><a href="../contato/contato.html">Contact</a></li>
         <li><a href="#" id="authLink">Login</a></li>
       </ul>
     </div>
@@ -251,9 +237,9 @@ function googleTranslateElementInit() {
 
     <!-- Informações do footer -->
     <div class="footer-info">
-      <p>&copy; 2019 Guarini e-sport. Todos os direitos reservados.</p>
-      <p><a href="https://linktr.ee/guariniesports" target="_blank">Conheça nossas redes sociais</a></p>
-      <p>Created by: Lobo & Shad</p>
+        <p>&copy; © 2019 Guariní E-sport. All rights reserved.</p>
+        <p><a href="https://linktr.ee/guariniesports" target="_blank">Follow us on social media!</a></p>
+        <p>Created by: Lobo & Shad</p>
     </div>
   </div>
 </footer>
@@ -584,32 +570,6 @@ function googleTranslateElementInit() {
   </script>
 
   <script>
-    // Funcionalidade do menu mobile
-    const menuToggle = document.querySelector('.menu-toggle');
-    const mobileMenu = document.querySelector('.mobile-menu');
-
-    menuToggle.addEventListener('click', function() {
-      this.classList.toggle('ativo');
-      mobileMenu.classList.toggle('ativo');
-    });
-
-    // Fechar menu ao clicar em um link
-    const mobileLinks = document.querySelectorAll('.mobile-menu a');
-    mobileLinks.forEach(link => {
-      link.addEventListener('click', function() {
-        menuToggle.classList.remove('ativo');
-        mobileMenu.classList.remove('ativo');
-      });
-    });
-
-    // Fechar menu ao redimensionar para desktop
-    window.addEventListener('resize', function() {
-      if (window.innerWidth > 900) {
-        menuToggle.classList.remove('ativo');
-        mobileMenu.classList.remove('ativo');
-      }
-    });
-
     // Redirecionar ao clicar nos botões de compra
     const botoesComprar = document.querySelectorAll('.btn-comprar[data-link]');
     botoesComprar.forEach(botao => {
