--- a/index.html
+++ b/index.html
@@ -958,9 +958,9 @@ function createTopBuildCard(build, rank, creatorData) {
           icone: "./img-site/youtube-icon.png"
         },
         {
-          tipo: "instagram",
-          url: "https://www.instagram.com/leandrodecidueye",
-          icone: "./img-site/instagram-icon.png"
+          tipo: "Instagram",
+          url: "https://www.Instagram.com/leandrodecidueye",
+          icone: "./img-site/Instagram-icon.png"
         },
         {
           tipo: "discord",
@@ -1024,9 +1024,9 @@ function createTopBuildCard(build, rank, creatorData) {
           icone: "./img-site/youtube-icon.png"
         },
         {
-          tipo: "instagram",
+          tipo: "Instagram",
           url: "https://exemplo.com",
-          icone: "./img-site/instagram-icon.png"
+          icone: "./img-site/Instagram-icon.png"
         },
         {
           tipo: "tiktok",
@@ -1041,9 +1041,9 @@ function createTopBuildCard(build, rank, creatorData) {
       logo: "https://via.placeholder.com/100/ffad00/000000?text=RGB",
       redes: [
         {
-          tipo: "instagram",
+          tipo: "Instagram",
           url: "https://exemplo.com",
-          icone: "./img-site/instagram-icon.png"
+          icone: "./img-site/Instagram-icon.png"
         },
         {
           tipo: "youtube",
