--- a/index.html
+++ b/index.html
@@ -936,14 +936,14 @@ function createTopBuildCard(build, rank, creatorData) {
           icone: "./img-site/youtube-icon.png"
         },
         {
-          tipo: "twitch",
-          url: "https://www.twitch.tv/jessiemineira",
-          icone: "./img-site/twitch-icon.png"
+          tipo: "X",
+          url: "https://x.com/jessie_mineira",
+          icone: "./img-site/x-icon.png"
         },
         {
-          tipo: "twitter",
-          url: "https://twitter.com/jessiemineira",
-          icone: "./img-site/x-icon.png"
+          tipo: "twitch",
+          url: "https://www.twitch.tv/jessie_mineira",
+          icone: "./img-site/twitch-icon.png"
         }
       ]
     },
@@ -958,13 +958,13 @@ function createTopBuildCard(build, rank, creatorData) {
           icone: "./img-site/youtube-icon.png"
         },
         {
-          tipo: "Instagram",
-          url: "https://www.Instagram.com/leandrodecidueye",
-          icone: "./img-site/Instagram-icon.png"
+          tipo: "twitch",
+          url: "https://www.twitch.tv/leandrodecidueye",
+          icone: "./img-site/twitch-icon.png"
         },
         {
           tipo: "discord",
-          url: "https://discord.gg/leandrodecidueye",
+          url: "https://discord.gg/ubxkRNGFn2",
           icone: "./img-site/discord-icon.png"
         }
       ]
@@ -980,13 +980,13 @@ function createTopBuildCard(build, rank, creatorData) {
           icone: "./img-site/twitch-icon.png"
         },
         {
-          tipo: "twitter",
-          url: "https://twitter.com/doixka",
+          tipo: "tiktok",
+          url: "https://www.tiktok.com/@rayssadoixkaoliveira",
           icone: "./img-site/tiktok-icon.png"
         },
         {
           tipo: "youtube",
-          url: "https://www.youtube.com/@doixka",
+          url: "https://www.youtube.com/@RKKOliveira",
           icone: "./img-site/youtube-icon.png"
         }
       ]
@@ -1002,57 +1002,57 @@ function createTopBuildCard(build, rank, creatorData) {
           icone: "./img-site/twitch-icon.png"
         },
         {
-          tipo: "youtube",
-          url: "https://www.youtube.com/@qbpudds",
-          icone: "./img-site/youtube-icon.png"
-        },
-        {
-          tipo: "twitter",
-          url: "https://twitter.com/qbpudds",
+          tipo: "X",
+          url: "https://x.com/QBPudds",
           icone: "./img-site/x-icon.png"
+        },
+        {
+          tipo: "youtube",
+          url: "https://www.youtube.com/@QBPudds",
+          icone: "./img-site/youtube-icon.png"
         }
       ]
     },
     {
-      nome: "Headset Pro",
-      descricao: "Áudio imersivo para gamers",
-      logo: "https://via.placeholder.com/100/ff7500/ffffff?text=HP",
+      nome: "Shad",
+      descricao: "Desenvolvedor e Coach de Pokemon Unite",
+      logo: "./img-site/apoiadores/shad.jpg",
       redes: [
         {
-          tipo: "youtube",
-          url: "https://exemplo.com",
-          icone: "./img-site/youtube-icon.png"
+          tipo: "twitch",
+          url: "https://www.twitch.tv/geoshad",
+          icone: "./img-site/twitch-icon.png"
         },
         {
-          tipo: "Instagram",
-          url: "https://exemplo.com",
-          icone: "./img-site/Instagram-icon.png"
+          tipo: "X",
+          url: "https://x.com/Shadtrader32",
+          icone: "./img-site/X-icon.png"
         },
         {
-          tipo: "tiktok",
-          url: "https://exemplo.com",
-          icone: "./img-site/tiktok-icon.png"
+          tipo: "reddit",
+          url: "https://www.reddit.com/user/FoundationDry9683/",
+          icone: "./img-site/reddit-icon.png"
         }
       ]
     },
     {
-      nome: "RGB Lighting",
-      descricao: "Iluminação profissional para setup",
-      logo: "https://via.placeholder.com/100/ffad00/000000?text=RGB",
+      nome: "Lobo",
+      descricao: "Software Engineer and GameDev",
+      logo: "./img-site/apoiadores/lobo.jpg",
       redes: [
         {
-          tipo: "Instagram",
-          url: "https://exemplo.com",
-          icone: "./img-site/Instagram-icon.png"
+          tipo: "X",
+          url: "https://x.com/lobo_vgc",
+          icone: "./img-site/X-icon.png"
         },
         {
-          tipo: "youtube",
-          url: "https://exemplo.com",
-          icone: "./img-site/youtube-icon.png"
+          tipo: "twitch",
+          url: "https://www.twitch.tv/lobo_vgc",
+          icone: "./img-site/twitch-icon.png"
         },
         {
           tipo: "tiktok",
-          url: "https://exemplo.com",
+          url: "https://www.tiktok.com/@lobo_vgc",
           icone: "./img-site/tiktok-icon.png"
         }
       ]
