--- a/index.html
+++ b/index.html
@@ -1026,7 +1026,7 @@ function createTopBuildCard(build, rank, creatorData) {
         {
           tipo: "X",
           url: "https://x.com/Shadtrader32",
-          icone: "./img-site/X-icon.png"
+          icone: "./img-site/x-icon.png"
         },
         {
           tipo: "reddit",
@@ -1043,7 +1043,7 @@ function createTopBuildCard(build, rank, creatorData) {
         {
           tipo: "X",
           url: "https://x.com/lobo_vgc",
-          icone: "./img-site/X-icon.png"
+          icone: "./img-site/x-icon.png"
         },
         {
           tipo: "twitch",
