--- a/material.html
+++ b/material.html
@@ -285,7 +285,7 @@ function generatePokemonGallery() {
       return;
     }
     
-    if (playerId.length !== 7) {
+    if (playerId.length < 5 || playerId.length > 7) {
       profileSearchResults.classList.remove('show');
       return;
     }
@@ -373,7 +373,7 @@ function generatePokemonGallery() {
       e.target.value = e.target.value.slice(0, 7);
     }
     
-    if (e.target.value.length === 7) {
+    if (e.target.value.length >= 5 && e.target.value.length <= 7) {
       await buscarPerfil();
     } else {
       profileSearchResults.classList.remove('show');
