--- a/damage-calculator.html
+++ b/damage-calculator.html
@@ -447,7 +447,7 @@ function googleTranslateElementInit() {
         return;
       }
       
-      if (playerId.length !== 7) {
+      if (playerId.length < 5 || playerId.length > 7) {
         profileSearchResults.classList.remove('show');
         return;
       }
@@ -560,7 +560,7 @@ function googleTranslateElementInit() {
         e.target.value = e.target.value.slice(0, 7);
       }
       
-      if (e.target.value.length === 7) {
+      if (e.target.value.length >= 5 && e.target.value.length <= 7) {
         console.log('🎯 7 caracteres digitados - buscando automaticamente...');
         await buscarPerfil();
       } else {
