--- a/groups/groups.html
+++ b/groups/groups.html
@@ -328,7 +328,7 @@ function googleTranslateElementInit() {
       return;
     }
     
-    if (playerId.length !== 7) {
+    if (playerId.length < 5 || playerId.length > 7) {
       profileSearchResults.classList.remove('show');
       return;
     }
@@ -416,7 +416,7 @@ function googleTranslateElementInit() {
       e.target.value = e.target.value.slice(0, 7);
     }
     
-    if (e.target.value.length === 7) {
+    if (e.target.value.length >= 5 && e.target.value.length <= 7) {
       await buscarPerfil();
     } else {
       profileSearchResults.classList.remove('show');
