update foto lobo

--- a/index.html
+++ b/index.html
@@ -1038,7 +1038,7 @@ function createTopBuildCard(build, rank, creatorData) {
     {
       nome: "Lobo",
       descricao: "Software Engineer and GameDev",
-      logo: "./img-site/apoiadores/lobo.jpg",
+      logo: "./img-site/apoiadores/lobo.png",
       redes: [
         {
           tipo: "X",
