att patch, imagens e recent builds

--- a/material.html
+++ b/material.html
@@ -180,7 +180,7 @@ function googleTranslateElementInit() {
     'comfey', 'cramorant', 'crustle', 'decidueye', 'delphox', 'dhelmise',
     'dodrio', 'dragapult', 'dragonite', 'duraludon', 'eldegoss', 'empoleon', 'espeon',
     'falinks', 'garchomp', 'gardevoir', 'gengar', 'glaceon', 'goodra', 'greedent',
-    'greninja', 'gyarados', 'hooh', 'hoopa', 'inteleon', 'lapras', 'latias', 'latios', 'leafeon',
+    'greninja', 'gyarados', 'megagyarados','hooh', 'hoopa', 'inteleon', 'lapras', 'latias', 'latios', 'leafeon',
     'lucario', 'megalucario', 'machamp', 'mamoswine', 'meowscara', 'metagross', 'mew', 'mewtwox', 'mewtwoy',
     'mimikyu', 'miraidon', 'mrmime', 'ninetales', 'pawmot', 'pikachu', 'psyduck', 'raichu', 'rapidash',
     'sableye', 'scizor', 'slowbro', 'snorlax', 'suicune', 'sylveon', 'talonflame',
