att em material

--- a/material.html
+++ b/material.html
@@ -46,6 +46,7 @@ function googleTranslateElementInit() {
       </div>
       <ul class="user-dropdown-list">
         <li><a href="./perfil/perfil.html" id="perfilLink">Profile</a></li>
+        <li><a href="../index.html">Home</a></li>
         <li><a href="./loja/loja.html">Shop</a></li>
         <li><a href="./sobre/sobre.html">About</a></li>
         <li><a href="./groups/groups.html">Games</a></li>
@@ -95,7 +96,7 @@ function googleTranslateElementInit() {
     </section>
 
     <p style="text-align:center; margin-top: 2rem;">
-      <a href="index.html" class="btn-comprar">Voltar para Início</a>
+      <a href="index.html" class="btn-comprar">Back to Home</a>
     </p>
   </main>
 
