--- a/perfil/perfil.html
+++ b/perfil/perfil.html
@@ -1169,7 +1169,7 @@ btnShareProfile.addEventListener('click', () => {
         'dhelmise', 'dodrio', 'dragapult', 'dragonite', 'duraludon',
         'eldegoss', 'empoleon', 'espeon', 'falinks', 'garchomp',
         'gardevoir', 'gengar', 'glaceon', 'goodra', 'greedent', 'greninja',
-        'gyarados', 'hooh', 'hoopa', 'inteleon', 'lapras',
+        'gyarados', 'megagyarados', 'hooh', 'hoopa', 'inteleon', 'lapras',
         'latias', 'latios', 'leafeon', 'lucario', 'machamp',
         'mamoswine', 'megacharizardx', 'megalucario', 'metagross', 'meowscara',
         'mew', 'mewtwox', 'mewtwoy', 'mimikyu', 'miraidon',
