--- a/createdbuilds.html
+++ b/createdbuilds.html
@@ -723,7 +723,7 @@
         <span>Hello, visitor!</span>
       </div>
       <ul class="user-dropdown-list">
-        <li><a href="./perfil.html" id="perfilLink">Profile</a></li>
+        <li><a href="./perfil/perfil.html" id="perfilLink">Profile</a></li>
         <li><a href="./loja/loja.html">Shop</a></li>
         <li><a href="./sobre/sobre.html">About</a></li>
         <li><a href="./groups/groups.html">Games</a></li>
