--- a/login/registro.html
+++ b/login/registro.html
@@ -308,7 +308,7 @@ const db = getFirestore(app);
       
       // Redirecionar após um breve delay
       setTimeout(() => {
-        window.location.href = "index.html";
+        window.location.href = "../index.html";
       }, 2000);
       
     } catch (error) {
