--- a/damage-calculator.html
+++ b/damage-calculator.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Build Calculator - Pokémon Unite</title>
-  <link rel="icon" href="favicon.png" type="image/png">
+  <link rel="icon" href="./img-site/favicon.png" type="image/png">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="calculadora.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
