--- a/loja/loja.html
+++ b/loja/loja.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="Confira os produtos oficiais da Guariní e-sport na nossa loja: camisas, bonés, mousepads e muito mais." />
   <title>Loja Guariní e-sport</title>
-  <link rel="icon" href="../favicon.png" type="image/png" />
+  <link rel="icon" href="../img-site/favicon.png" type="image/png" />
   <link rel="stylesheet" href="../style.css" />
 <!-- Google Translate (oculto) -->
 <div id="google_translate_element" style="display: none;"></div>
