--- a/material.html
+++ b/material.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="Ferramentas e materiais da Guarini e-sport: calculadoras e utilitários para jogadores." />
   <title>Materiais Guarini e-sport</title>
-  <link rel="icon" href="favicon.png" type="image/png" />
+  <link rel="icon" href="./img-site/favicon.png" type="image/png" />
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="materiais.css" />
 
