update mega charizard y

--- a/material.html
+++ b/material.html
@@ -177,7 +177,7 @@ function googleTranslateElementInit() {
   // ========================================
   const pokemonList = [
     'absol', 'aegislash', 'alcremie', 'armarouge', 'azumarill', 'blastoise', 'blaziken', 'blissey', 
-    'buzzwole', 'ceruledge', 'chandelure', 'charizard', 'megacharizardx', 'cinderace', 'clefable',
+    'buzzwole', 'ceruledge', 'chandelure', 'charizard', 'megacharizardx', 'megacharizardy', 'cinderace', 'clefable',
     'comfey', 'cramorant', 'crustle', 'decidueye', 'delphox', 'dhelmise',
     'dodrio', 'dragapult', 'dragonite', 'duraludon', 'eldegoss', 'empoleon', 'espeon',
     'falinks', 'garchomp', 'gardevoir', 'gengar', 'glaceon', 'goodra', 'greedent',
