--- a/course/coach-loja.html
+++ b/course/coach-loja.html
@@ -191,7 +191,7 @@
         document.getElementById('course-modal-content').innerHTML = '';
       });
 
-      // Sugestões de backend:
+      // Sugestões de backend teste:
       // GET /api/courses -> retorna todos os cursos publicados
       // GET /api/courses/:id -> detalhes
       // POST /api/checkout -> cria checkout (PagSeguro, Stripe, Pagar.me)
