--- a/course/mentoring.html
+++ b/course/mentoring.html
@@ -50,7 +50,6 @@
                     <option value="">Selecione o jogo</option>
                     <option value="League of Legends">League of Legends</option>
                     <option value="Valorant">Valorant</option>
-                    <option value="CS:GO">CS:GO</option>
                     <option value="CS2">CS2</option>
                     <option value="Dota 2">Dota 2</option>
                     <option value="Fortnite">Fortnite</option>
@@ -59,6 +58,7 @@
                     <option value="Overwatch 2">Overwatch 2</option>
                     <option value="Call of Duty">Call of Duty</option>
                     <option value="Free Fire">Free Fire</option>
+                    <option value="Pokémon Unite">Pokémon Unite</option>
                     <option value="Outro">Outro</option>
                 </select>
                 <input type="text" id="otherGame" placeholder="Digite o nome do jogo" style="display: none; margin-top: 10px;">
