--- a/course/course-select.html
+++ b/course/course-select.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div class="container">
+        <a href="./marketplace.html" class="btn-back">← Voltar</a>
         <h1>🎮 Criar Conteúdo</h1>
         <p class="subtitle">Escolha o tipo de conteúdo que deseja oferecer na plataforma</p>
 
@@ -16,7 +17,7 @@
             <div class="file-input-wrapper" onclick="navigateTo('./course.html')" style="cursor: pointer; margin-bottom: 25px;">
                 <div class="file-input-label" style="flex-direction: column; padding: 40px 30px; gap: 15px;">
                     <div style="font-size: 4em;">📚</div>
-                    <div style="font-size: 1.8em; font-weight: 600; color: #00f2fe;">Curso</div>
+                    <div style="font-size: 1.8em; font-weight: 600; color: #ff7500;">Curso</div>
                     <div style="color: #b0b0b0; text-align: center; margin: 10px 0;">
                         Crie um curso completo com vídeo-aulas e material complementar para ensinar sua expertise
                     </div>
@@ -36,7 +37,7 @@
             <div class="file-input-wrapper" onclick="navigateTo('./mentoring.html')" style="cursor: pointer;">
                 <div class="file-input-label" style="flex-direction: column; padding: 40px 30px; gap: 15px;">
                     <div style="font-size: 4em;">🎯</div>
-                    <div style="font-size: 1.8em; font-weight: 600; color: #00f2fe;">Mentoria</div>
+                    <div style="font-size: 1.8em; font-weight: 600; color: #ff7500;">Mentoria</div>
                     <div style="color: #b0b0b0; text-align: center; margin: 10px 0;">
                         Ofereça sessões ao vivo individuais ou em grupo para acompanhamento personalizado
                     </div>
