--- a/course/course.html
+++ b/course/course.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div class="container">
+        <a href="./course-select.html" class="btn-back">← Voltar</a>
         <h1>🎮 Cadastrar Curso</h1>
         <p class="subtitle">Compartilhe seu conhecimento em e-sports</p>
 
@@ -107,6 +108,6 @@
     </div>
 
     <!-- Carregar o script do Firebase e o código JavaScript -->
-    <script type="module" src="script.js"></script>
+    <script type="module" src="./script-course.js"></script>
 </body>
 </html>
