--- a/loja/loja.html
+++ b/loja/loja.html
@@ -114,6 +114,13 @@ function googleTranslateElementInit() {
       </article>
 
       <article class="produto">
+        <img src="./img-shop/fone.jpg" alt="Fone de Ouvido Bluetooth" />
+        <h3>Fone de Ouvido Bluetooth</h3>
+        <p class="preco">R$ 68,58</p>
+        <button type="button" class="btn-comprar" data-link="https://amzn.to/3L4yIt3">Buy</button>
+      </article>
+
+      <article class="produto">
         <img src="./img-shop/mochila.jpg" alt="Mochila Guariní" />
         <h3>Backpack</h3>
         <p class="preco">$ 47,70</p>
