--- a/loja/loja.html
+++ b/loja/loja.html
@@ -107,10 +107,10 @@ function googleTranslateElementInit() {
     <h2>Official Shop Guariní</h2>
     <section class="produtos">
       <article class="produto">
-        <img src="./img-shop/camisa.jpg" alt="Camisa Oficial Guariní" />
-        <h3>Official Shirt</h3>
-        <p class="preco">Coming soon</p>
-        <button type="button" class="btn-comprar" disabled>Coming soon</button>
+        <img src="./img-shop/curso-lobo.png" alt="Curso e-sports" />
+        <h3>Do Amador ao Competitivo</h3>
+        <p class="preco">R$ 29,90</p>
+        <button type="button" class="btn-comprar" data-link="https://go.hotmart.com/P103681152Q">Buy</button>
       </article>
 
       <article class="produto">
