--- a/material.html
+++ b/material.html
@@ -182,7 +182,7 @@ function googleTranslateElementInit() {
     'dodrio', 'dragapult', 'dragonite', 'duraludon', 'eldegoss', 'empoleon', 'espeon',
     'falinks', 'garchomp', 'gardevoir', 'gengar', 'glaceon', 'goodra', 'greedent',
     'greninja', 'gyarados', 'megagyarados','hooh', 'hoopa', 'inteleon', 'lapras', 'latias', 'latios', 'leafeon',
-    'lucario', 'megalucario', 'machamp', 'mamoswine', 'meowscara', 'metagross', 'mew', 'mewtwox', 'mewtwoy',
+    'lucario', 'megalucario', 'machamp', 'mamoswine', 'meowscara', 'meowth', 'metagross', 'mew', 'mewtwox', 'mewtwoy',
     'mimikyu', 'miraidon', 'mrmime', 'ninetales', 'pawmot', 'pikachu', 'psyduck', 'raichu', 'rapidash',
     'sableye', 'scizor', 'slowbro', 'snorlax', 'suicune', 'sylveon', 'talonflame',
     'tinkaton', 'trevenant', 'tsareena', 'tyranitar', 'umbreon', 'urshifu', 'vaporeon',
