--- a/sobre/sobre.html
+++ b/sobre/sobre.html
@@ -108,7 +108,7 @@ function googleTranslateElementInit() {
       <div class="sobre-texto">
         <h2>About Guariní E-sport</h2>
         <p>
-          Founded on <strong>May 11, 2019</strong>, FOI? Guariní E-sport was born to drive the passion for esports and lead players to excellence. Our name, inspired by Tupi-Guarani, means "<em>that which gives strength</em>", reflecting our determination and competitive spirit.
+          Founded on <strong>May 11, 2019</strong>, Guariní E-sport was born to drive the passion for esports and lead players to excellence. Our name, inspired by Tupi-Guarani, means "<em>that which gives strength</em>", reflecting our determination and competitive spirit.
         </p>
         <p>
           We compete in titles such as <strong>Pokémon Unite</strong>, <strong>VGC</strong>, <strong>TCG</strong>, and <strong>Pokémon GO</strong>, always pursuing evolution, strategy, and innovation.
