Update produto loja

--- a/loja/loja.html
+++ b/loja/loja.html
@@ -121,10 +121,10 @@ function googleTranslateElementInit() {
       </article>
 
       <article class="produto">
-        <img src="./img-shop/mochila.jpg" alt="Mochila Guariní" />
-        <h3>Backpack</h3>
-        <p class="preco">$ 47,70</p>
-        <button type="button" class="btn-comprar" data-link="https://streamlabs.com/guarini_esports/merch/5571573">Buy</button>
+        <img src="./img-shop/not-lenovo.jpg" alt="Notebook Lenovo" />
+        <h3>Notebook Lenovo</h3>
+        <p class="preco">R$ 2.699,10</p>
+        <button type="button" class="btn-comprar" data-link="https://mercadolivre.com/sec/1ga48PA">Buy</button>
       </article>
 
       <article class="produto">
