--- a/loja/loja.html
+++ b/loja/loja.html
@@ -128,10 +128,10 @@ function googleTranslateElementInit() {
       </article>
 
       <article class="produto">
-        <img src="./img-shop/agenda.jpg" alt="Caderno capa dura Guariní" />
-        <h3>Hardcover Notebook</h3>
-        <p class="preco">$ 21,00</p>
-        <button type="button" class="btn-comprar" data-link="https://streamlabs.com/guarini_esports/merch/5023076">Buy</button>
+        <img src="./img-shop/not-gameracer.jpg" alt="Notebook Gamer Acer Nitro" />
+        <h3>Notebook Gamer Acer Nitro</h3>
+        <p class="preco">R$ 5.509,05</p>
+        <button type="button" class="btn-comprar" data-link="https://mercadolivre.com/sec/2K26btZ">Buy</button>
       </article>
 
       <article class="produto">
